chore: added border-radius for subscription mail

--- a/src/app/views/emails/subscription.hbs
+++ b/src/app/views/emails/subscription.hbs
@@ -1,10 +1,10 @@
 <strong>Hello {{ ownerName }}!</strong>
 <p>There is a new subscription at your meetup: <strong>{{ meetupTitle }}</strong></p>
 <p>
-  <img style="width: 400px" src={{ bannerURL }} /><br />
+  <img style="width: 400px; border-radius: 5px;" src={{ bannerURL }} /><br />
   <strong>Date: </strong>{{ meetupDate }} <br />
   <br />
-  <img style="width: 200px" src={{ subAvatar }} /><br />
+  <img style="width: 200px; border-radius: 50%;" src={{ subAvatar }} /><br />
   <strong>Subscriber: </strong>{{ subName }}<br />
   <strong>E-mail: </strong>{{ subEmail }}<br />
   <strong>Subscribed at: </strong>{{ subDate }}<br />
